software_module now a package, can import from run.py

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ venv/
 # Environment variables
 .env
 
-# Pycache for main/ folder
+# Pycache folders
 software_module/core/__pycache__
+software_module/__pycache__
